--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -1,184 +1,220 @@
-
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Forty by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<title>Colin Murphy</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+	<head>
+		<title>Colin Murphy</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" href="https://img.icons8.com/cotton/64/000000/favourite-website.png"/>
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='assets/css/main.css') }}" />
+    	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<noscript><link rel="stylesheet" href="static/assets/css/noscript.css" /></noscript>
 
-body, html {
-  height: 100%;
-  line-height: 1.8;
-  background-color: #FFDBDB;
-  padding-top: 30px;
+		<style>
 
-}
-
-/* Full height image header */
-.bgimg-1 {
-  background-position: center;
-  background-size: cover;
-  background-image: url("https://miro.medium.com/max/4800/1*rZ1vDrOBWqISFiNL5OMEbg.jpeg");
-  min-height: 100%;
-}
-
-.w3-bar .w3-button {
-  padding: 16px;
-}
-
-h7{
-    max-width: 800px;
-    margin: auto;
-    padding: 1em;
-    text-align:center;
-}
-
-input[type=file] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  
-}
-input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 15px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-</style>
-<body>
-
-<!-- Navbar (sit on top) -->
-<div class="w3-top" style="background-color: #FFDBDB;">
-  <div class="w3-bar w3-white w3-card"  id="myNavbar">
-	  <a href="https://github.com/poilpy" onclick="w3_close()" class="w3-bar-item w3-button"> <i class="fa fa-github"></i> GitHub</a>
-    <!-- Right-sided navbar links -->
-    <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button"><i class="fa fa-book"></i> ABOUT ME </a>
-	    <a href="#program" class="w3-bar-item w3-button"><i class="fa fa-camera-retro"></i> PROJECTS </a>
-
-    </div>
-    <!-- Hide right-floated links on small screens and replace them with a menu icon -->
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </div>
-</div>
-
-<!-- Sidebar on small screens when clicking the menu icon -->
-<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-      <a href="#about" class="w3-bar-item w3-button">Summary </a>
-      <a href="#program" class="w3-bar-item w3-button"> PROJECTS </a>
-</nav>
-
-<!-- Header with full-height image -->
-<header class="bgimg-1 w3-display-container "" id="home">
-  <div class="w3-display-left w3-text-black" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small" style="padding: 10px; border: 2px ridge rgb(0, 0, 0); background-color: #FFDBDB;">Colin Murphy</span><br>
-    <p><img src="/static/photos/me.jpg" alt="me_image" style="max-width: 25%; max-height: 30%; border: 2px ridge rgb(0, 0, 0);"></p>
-    <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w2-opacity w3-hover-opacity-off">Learn more about me!</a></p>
-  </div>
-  <!-- <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
-    <i class="fa fa-github w3-hover-opacity"></i> -->
-  </div>
-</header>
-
-<!-- About Section -->
-<div class="w3-container" style="padding:75px 16px" id="about">
-  <br>
-  <h3 class="w3-center" style="text-decoration: underline;"> About Me </h3>
-    <p class="w3-center w3-large"> 
-      I'm a computer science graduate from the University of California, Santa Cruz, with interest and experience in machine learning and data science.
-    </p>
-
-</div>
-
-<!-- Program Section -->
-<div class="w3-container w3-light-grey" style="padding:75px 16px" id="program">
-  <h2 class="w3-center" style="text-decoration: underline;">Projects</h3>
-    <h4 class="w3-center" style="text-decoration: underline;"> Semantic Image Segmentation and Classifier </h3>
-    <p class="w3-center w3-large">
-      Semantic image segmentation is the process of using machine learning to identify and label the parts of an image that a user is looking for. 
-      Below is a demo of a model which takes in jpg images and creates a segmentation for it just like these examples.
-
-    </p>
-    <div class="w3-center">
-      <p><img src="/static/photos/ex1.png" alt="ex1_image" style="max-width: 30%; max-height: 30%;"></p>
-      
-      <p><img src="/static/photos/ex2.png" alt="ex2_image" style="max-width: 30%; max-height: 30%;"></p>
-      
-      <p><img src="/static/photos/ex3.png" alt="ex3_image" style="max-width: 30%; max-height: 30%;"></p>
-    </div>
-    <p class="w3-center w3-large"> Another model will also classify your image, telling you in words what it thinks your image is about. </p>
-
-    <h7>
-      <p>Segmentation supports: aeroplane, bicycle, bird, boat, bottle, bus, car, cat, chair, cow, diningtable,
-          dog, horse, motorbike, person, potted plant, sheep, sofa, train, tv/monitor</p>
-      <p> Classification supports: plane, car, bird, cat, deer, dog, frog, horse, ship, truck</p>
-    </h7>
-  <h7><p><font size="6">Upload your jpg image here</font></p></h7>
-  <h7>
-		<form method ='post' enctype=multipart/form-data>
-			<input type="file" name="file" accept="image/jpeg" required>
-      <input type="submit" value="Upload" onclick="myFunction()"><p id="demo"></p>
-  </h7>
-</div>
+			
+		</style>
 
 
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
-	  <a href="https://github.com/poilpy" onclick="w3_close()" class="w3-bar-item w3-button"> <i class="fa fa-github"></i></a>
-  </div>
-</footer>
+	</head>
+	<body class="is-preload">
 
-<script>
-// Modal Image Gallery
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header" class="alt">
+						<a href="https://github.com/poilpy" onclick="w3_close()" class="w3-bar-item w3-button"> <i class="fa fa-github" "></i> <span> GitHub </span> </a>
+						<nav>
+							<a href="#menu">Menu</a>
+						</nav>
+					</header>
+
+				<!-- Menu -->
+					<nav id="menu">
+						<ul class="links">
+							<li><a href="/">Home</a></li>
+							<li>Projects</li>
+							<li><a href="/segment">Segmentation</a></li>
+							<li><a href="/collatz">Collatz</a></li>
+						</ul>
+					</nav>
+
+				<!-- Banner -->
+					<section id="banner" class="major">
+						<div class="inner">
+							<header class="major">
+								<h1>Hi, my name is Colin</h1><div class="image"><img src="/static/photos/me.jpg"></div>
+							</header>
+							<div class="content">
+								<p>Recent Computer Science Graduate with foundational knowledge of software design, development and testing. 
+									Team player with a can-do attitude, strong communication skills and detail oriented thinking 
+									with a desire to solve problems in health care with machine learning .</p>
+								<ul class="actions">
+									<li><a href="#one" class="button next scrolly">My Projects</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- One -->
+							<section id="one" class="tiles">
+								<article>
+									<span class="image">
+										<img src="/static/photos/graph.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="/collatz" class="link">3x+1 visualizer</a></h3>
+										<p>A quick visualizer for the unsolvable Collatz conjecture</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="/static/photos/ex1.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="/segment" class="link">Semantic Image Segmentation</a></h3>
+										<p>A machine learning program for picking out specific objects in images built in pytorch</p>
+									</header>
+								</article>
+								<!-- <article>
+									<span class="image">
+										<img src="images/pic03.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="landing.html" class="link">Magna</a></h3>
+										<p>Lorem etiam nullam</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="landing.html" class="link">Ipsum</a></h3>
+										<p>Nisl sed aliquam</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="landing.html" class="link">Consequat</a></h3>
+										<p>Ipsum dolor sit amet</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic06.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="landing.html" class="link">Etiam</a></h3>
+										<p>Feugiat amet tempus</p>
+									</header>
+								</article> -->
+							</section>
+
+						<!-- Two -->
+							<section id="two">
+								<div class="inner">
+									<header class="major">
+										<h2>About Me</h2>
+									</header>
+									<p>Things about me...</p>
+								</div>
+							</section>
+
+					</div>
+
+				<!-- Contact -->
+					<section id="contact">
+						<div class="inner">
+
+              <div>
+                <img src="/static/photos/me.jpg" alt="me_image" style="max-width: 80%; max-height: 80%; border: 2px ridge rgb(0, 0, 0);">
+              </div>
 
 
-// Toggle between showing and hiding the sidebar when clicking the menu icon
-var mySidebar = document.getElementById("mySidebar");
+							<!-- <section>
+								<form method="post" action="#">
+									<div class="fields">
+										<div class="field half">
+											<label for="name">Name</label>
+											<input type="text" name="name" id="name" />
+										</div>
+										<div class="field half">
+											<label for="email">Email</label>
+											<input type="text" name="email" id="email" />
+										</div>
+										<div class="field">
+											<label for="message">Message</label>
+											<textarea name="message" id="message" rows="6"></textarea>
+										</div>
+									</div>
+									<ul class="actions">
+										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="reset" value="Clear" /></li>
+									</ul>
+								</form>
+							</section> -->
 
-function w3_open() {
-  if (mySidebar.style.display === 'block') {
-    mySidebar.style.display = 'none';
-  } else {
-    mySidebar.style.display = 'block';
-  }
-}
 
-// Close the sidebar with the close button
-function w3_close() {
-    mySidebar.style.display = "none";
-}
+							<section class="split">
+								<section>
+									<div class="contact-method">
+										<span class="icon solid alt fa-envelope"></span>
+										<h3>Email</h3>
+										<a href="#">ColinMurphy97@gmail.com</a>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon solid alt fa-phone"></span>
+										<h3>Phone</h3>
+										<span>(415) 860-0907</span>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon solid alt fa-home"></span>
+										<h3>Address</h3>
+										<span>
+										San Francisco, CA 94116<br />
+										United States of America</span>
+									</div>
+								</section>
+							</section>
+						</div>
+					</section>
 
-function myFunction() {
-  document.getElementById("demo").innerHTML = "Loading... <i class='fa fa-telegram' aria-hidden='true'></i>";
-}
-</script>
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="https://github.com/poilpy" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/colinmurphy97/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
+						</div>
+					</footer>
 
-</body>
+			</div>
+
+		<!-- Scripts -->
+			<script src="static/assets/js/jquery.min.js"></script>
+			<script src="static/assets/js/jquery.scrolly.min.js"></script>
+			<script src="static/assets/js/jquery.scrollex.min.js"></script>
+			<script src="static/assets/js/browser.min.js"></script>
+			<script src="static/assets/js/breakpoints.min.js"></script>
+			<script src="static/assets/js/util.js"></script>
+			<script src="static/assets/js/main.js"></script>
+
+	</body>
 </html>
-
-
-
-
-
-	
